# filex

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.sh  tree.txt  xsl.py
docs/: README.md  examples.md
filex/: cli.py  editor.py  server.py  utils.py
scripts/: create_examples.py
tests/: test_editor.py
xsl/: __init__.py  __main__.py  cli.py  editor.py  server.py  utils.py
