[tool.poetry]
name = "xsl"
version = "0.1.5"
description = "Universal File Editor for XML/SVG/HTML with XPath and CSS selector support"
authors = ["Tom Sapletta <info@softreck.dev>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/veridock/filex"
repository = "https://github.com/veridock/filex"
documentation = "https://github.com/veridock/filex/docs"
keywords = ["xml", "svg", "html", "xpath", "editor", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Text Processing :: Markup :: HTML",
]

[tool.poetry.dependencies]
python = "^3.8"
lxml = { version = "^4.9.0", optional = true }
beautifulsoup4 = { version = "^4.11.0", optional = true }
requests = { version = "^2.28.0", optional = true }

[tool.poetry.extras]
full = ["lxml", "beautifulsoup4", "requests"]
xpath = ["lxml"]
css = ["beautifulsoup4"]
remote = ["requests"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
isort = "^5.12.0"

[tool.poetry.scripts]
filex = "filex.cli:main"
filex-server = "filex.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true